@@ -42,6 +42,9 @@ typedef uint32_t (*miniflow_extract_func)(struct dp_packet_batch *batch,
 /* The function pointer miniflow_extract_func depends on batch size. */
 BUILD_ASSERT_DECL(NETDEV_MAX_BURST == 32);
 
+/* Assert if there is flow map units change. */
+BUILD_ASSERT_DECL(FLOWMAP_UNITS == 2);
+
 /* Probe function is used to detect if this CPU has the ISA required
  * to run the optimized miniflow implementation.
  * returns one on successful probe.
@@ -75,9 +78,16 @@ struct dpif_miniflow_extract_impl {
  * should always come before the generic AVX512-F version.
  */
 enum dpif_miniflow_extract_impl_idx {
+    MFEX_IMPL_AUTOVALIDATOR,
     MFEX_IMPL_SCALAR,
     MFEX_IMPL_MAX
 };
+
+/* Define a index which points to the first traffic optimized MFEX
+ * option from the enum list else holds max value.
+ */
+
+#define MFEX_IMPL_START_IDX MFEX_IMPL_MAX
 
 /* This function returns all available implementations to the caller. The
  * quantity of implementations is returned by the int return value.
@@ -107,5 +117,17 @@ int dp_mfex_impl_set_default_by_name(const char *name);
  */
 void
 dpif_miniflow_extract_init(void);
+
+/* Retrieve the hitmask of the batch of pakcets which is obtained by comparing
+ * different miniflow implementations with linear miniflow extract.
+ * Key_size need to be at least the size of the batch.
+ * On error, returns a zero.
+ * On success, returns the number of packets in the batch compared.
+ */
+uint32_t
+dpif_miniflow_extract_autovalidator(struct dp_packet_batch *batch,
+                                    struct netdev_flow_key *keys,
+                                    uint32_t keys_size, odp_port_t in_port,
+                                    struct dp_netdev_pmd_thread *pmd_handle);
 
 #endif /* MFEX_AVX512_EXTRACT */
